fix - blogs tags alignment issue

--- a/comps/Blog/blog.module.scss
+++ b/comps/Blog/blog.module.scss
@@ -22,7 +22,10 @@
   color: $green-light;
   font-size: 1rem;
   line-height: 1.875rem;
-  min-width: 7.25rem;
+  min-width: 7rem;
+  @media screen and (min-width: 768px) {
+    min-width: 8.5rem;
+  }
   a {
     color: $green-light;
   }
